# huixin

./: .gitignore  Cargo.toml
.github/ISSUE_TEMPLATE/: tracker.md
crates/huisheng/: Cargo.toml
crates/huisheng/src/: main.rs
crates/huisheng/src/app/: helpers.rs  mod.rs
crates/huisheng/src/app/patch_viewer/: constants.rs  mod.rs
crates/huisheng/src/app/patch_viewer/nodes/: mod.rs  number.rs  oscillator.rs  speaker.rs
crates/huisheng/src/model/: mod.rs  state.rs
crates/huisheng/src/model/patch/: mod.rs
crates/huisheng/src/model/patch/node/: mod.rs  number.rs  oscillator.rs  speaker.rs
crates/huisheng/src/routines/: mod.rs  processor.rs
crates/huisheng/src/routines/processor/: mod.rs
crates/huixin/: Cargo.toml
crates/huixin/src/: main.rs
crates/huixin/src/app/: helpers.rs  mod.rs  persistence.rs
crates/huixin/src/app/tools/: connection_manager.rs  mod.rs  pattern_editor.rs  tester.rs
crates/huixin/src/app/tools/connection_manager/: mod.rs
crates/huixin/src/app/tools/pattern_editor/: mod.rs
crates/huixin/src/app/tools/pattern_editor/midi_editor/: constants.rs  midi_keyboard.rs  midi_note.rs  midi_rows.rs  mod.rs
crates/huixin/src/app/widgets/: error_modal.rs  mod.rs  track_editor.rs
crates/huixin/src/app/widgets/track_editor/: constants.rs  mod.rs  track_header.rs
crates/huixin/src/app/widgets/track_editor/track_row/: mod.rs
crates/huixin/src/app/widgets/track_editor/track_row/pattern_row/: mod.rs  track_pattern.rs
crates/huixin/src/app_ui/: mod.rs
crates/huixin/src/app_ui/widgets/: error_modal.rs  mod.rs
crates/huixin/src/apps/: helpers.rs
crates/huixin/src/apps/main/: error_modal.rs
crates/huixin/src/apps/networker/: mod.rs
crates/huixin/src/apps/programmer/: mod.rs
crates/huixin/src/apps/tester/: mod.rs
crates/huixin/src/model/: comm.rs  mod.rs  persistence.rs  state.rs
crates/huixin/src/model/pattern/: event.rs  midi.rs  mod.rs
crates/huixin/src/model/track/: mod.rs  pattern.rs
crates/huixin/src/routines/: guardian.rs  instructor.rs  metronome.rs  mod.rs  sheet_reader.rs
crates/huixin/src/sheet/: mod.rs  pattern.rs
crates/huixin/src/sheet/pattern/: curve.rs  midi.rs  mod.rs
crates/huixin/src/sheet/track/: event.rs  mod.rs  pattern.rs
crates/util/: Cargo.toml
crates/util/src/: comm.rs  egui.rs  id.rs  lib.rs  types.rs
huixin/: Cargo.toml  build.rs
huixin/src/: main.rs
huixin/src/apps/composer/: mod.rs
huixin/src/apps/main/: mod.rs
huixin/src/apps/tester/: mod.rs
huixin/src/routines/: metronome.rs
huixin/src/sheet/: mod.rs
src/: app.rs  main.rs  metronome.rs  sheet.rs  sheet_reader.rs
src/app/: helpers.rs
src/app/composer/: mod.rs
src/app/main/: error_modal.rs  mod.rs  performance.rs
src/app/networker/: mod.rs
src/app/programmer/: mod.rs
src/app/tester/: mod.rs
src/apps/main/: mod.rs
src/routines/: metronome.rs  sheet_reader.rs
src/ui/: helpers.rs  mod.rs
src/ui/composer/: mod.rs
src/ui/main/: error_modal.rs  mod.rs  performance.rs
src/ui/networker/: mod.rs
src/ui/programmer/: mod.rs
src/ui/tester/: mod.rs
