[workspace]
resolver = "3"
members = ["crates/huixin", "crates/huisheng", "crates/util"]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Saplyn"]

[workspace.dependencies]
# EGUI
eframe = { version = "0.33", default-features = false }
egui = { version = "0.33", default-features = false }
epaint = { version = "0.33", default-features = false }
ecolor = { version = "0.33.2", default-features = false }
emath = { version = "0.33", default-features = false }
egui_extras = { version = "0.33", default-features = false }
# Logging
log = "0.4"
simplelog = "0.12"
# Communication
serde = { version = "1.0", default-features = false }
ron = { version = "0.12", default-features = false }
# Misc
lyn-util = { path = "crates/util" }
