[workspace]
resolver = "3"
members = ["crates/huixin", "crates/huisheng", "crates/util"]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["Saplyn"]

[workspace.dependencies]
# EGUI
eframe = { version = "0.33", default-features = false }
egui = { version = "0.33", default-features = false }
epaint = { version = "0.33", default-features = false }
ecolor = { version = "0.33", default-features = false }
emath = { version = "0.33", default-features = false }
egui_dnd = { version = "0.14", default-features = false }
egui-winit = { version = "0.33", default-features = false }
# Logging
chrono = { version = "0.4", default-features = false }
log = { version = "0.4", default-features = false }
simplelog = { version = "0.12", default-features = false }
# Concurrency
parking_lot = { version = "0.12", default-features = false }
dashmap = { version = "7.0.0-rc2", default-features = false }
rayon = { version = "1.11", default-features = false }
# Communication
ws = { package = "tungstenite", version = "0.28.0", default-features = false }
# Encoding
serde = { version = "1.0", default-features = false }
json = { package = "serde_json", version = "1.0", default-features = false }
toml = { version = "0.9.10", default-features = false }
osc = { package = "rosc", version = "0.11.4", default-features = false }
# Misc
lyn-util = { path = "crates/util" }
either = { version = "1.15", default-features = false }
