[package]
name = "huixin"
version = "0.0.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
chrono = "0.4"

[dependencies]
# EGUI
eframe = { workspace = true }
egui = { workspace = true }
# Logging
log = { workspace = true }
simplelog = { workspace = true }
# Concurrency
parking_lot = "0.12"
dashmap = "7.0.0-rc2"
