[package]
name = "huisheng"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[build-dependencies]
chrono = { workspace = true, features = ["clock"] }

[dependencies]
# EGUI
eframe = { workspace = true, features = ["default"] }
egui = { workspace = true }
ecolor = { workspace = true }
emath = { workspace = true }
egui_dnd = { workspace = true }
egui-snarl = { version = "0.9", features = ["serde"] }
# Media
dasp = { version = "0.11", features = ["all"] }
cpal = "0.17"
# Logging
log = { workspace = true }
simplelog = { workspace = true, features = ["termcolor"] }
# Concurrency
parking_lot = { workspace = true, features = ["serde"] }
dashmap = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
# Communication
ws = { workspace = true, features = ["default"] }
# Encoding
serde = { workspace = true }
# Misc
either = { workspace = true, features = ["default"] }
lyn-util = { workspace = true }
petgraph = "0.8"
rand = { version = "0.9" }
