[package]
name = "huixin"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[build-dependencies]
chrono = { workspace = true, features = ["clock"] }

[dependencies]
# EGUI
eframe = { workspace = true, features = ["default"] }
egui = { workspace = true }
ecolor = { workspace = true }
emath = { workspace = true }
# Logging
log = { workspace = true }
simplelog = { workspace = true, features = ["termcolor"] }
# Concurrency
parking_lot = "0.12"
dashmap = "7.0.0-rc2"
rayon = "1.11"
# Communication
ws = { workspace = true, features = ["default"] }
serde = { workspace = true }
json = { workspace = true, features = ["default"] }
# Misc
either = "1.15"
lyn-util = { workspace = true }
