[package]
name = "huixin"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[build-dependencies]
chrono = { workspace = true, features = ["clock"] }

[dependencies]
# EGUI
eframe = { workspace = true, features = ["default", "persistence"] }
egui = { workspace = true, features = ["persistence"] }
ecolor = { workspace = true }
emath = { workspace = true }
egui-winit = "0.33"
egui_dnd = "0.14"
rfd = "0.16"
# Logging
log = { workspace = true }
simplelog = { workspace = true, features = ["termcolor"] }
# Concurrency
parking_lot = { version = "0.12", features = ["serde"] }
dashmap = { version = "7.0.0-rc2", features = ["serde"] }
rayon = "1.11"
interavl = { git = "https://github.com/Saplyn/interavl.git" }
# Communication
ws = { workspace = true, features = ["default"] }
# Encoding
serde = { workspace = true }
json = { workspace = true, features = ["default"] }
toml = { workspace = true, features = ["default"] }
# Misc
either = "1.15"
lyn-util = { workspace = true }
thiserror = "2.0"
