[package]
name = "huixin"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[build-dependencies]
chrono = { workspace = true, features = ["clock"] }

[dependencies]
# EGUI
eframe = { workspace = true, features = ["default", "persistence"] }
egui = { workspace = true, features = ["persistence"] }
ecolor = { workspace = true }
emath = { workspace = true }
egui-winit = { workspace = true }
egui_dnd = { workspace = true }
rfd = "0.16"
# Logging
log = { workspace = true }
simplelog = { workspace = true, features = ["termcolor"] }
# Concurrency
parking_lot = { workspace = true, features = ["serde"] }
dashmap = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
interavl = { git = "https://github.com/Saplyn/interavl.git" }
# Communication
ws = { workspace = true, features = ["default"] }
# Encoding
serde = { workspace = true }
json = { workspace = true, features = ["default"] }
toml = { workspace = true, features = ["default"] }
# Misc
either = { workspace = true, features = ["default"] }
lyn-util = { workspace = true }
thiserror = "2.0"
