[package]
name = "lyn-util"
edition.workspace = true
version.workspace = true
authors.workspace = true


[dependencies]
# EGUI
egui = { workspace = true }
epaint = { workspace = true }
# Communication
ws = { workspace = true, features = ["default"] }
serde = { workspace = true }
json = { workspace = true, features = ["default"] }
